kermeta_projects/fr.irisa.triskell.kermeta.tests/test/io/typechecher_tests/invalid/2_ClassSubTypingWithGenerics.kmt
/* $Id: 2_ClassSubTypingWithGenerics.kmt,v 1.2 2007-10-16 11:49:10 ftanguy Exp $ */

// INVALID Simple subtyping test for simple 
// inheritance between two generic classes 
package tctest;

require kermeta

class X {}
class Y inherits X {}

class A<T> {}
class B<G> inherits A<G> {}

class Test {

	operation test1() : Void is do
		var a: A<X> init A<Y>.new
	end
	
	operation test2() : Void is do
		var a: B<X> init A<X>.new
	end
	
	operation test3() : Void is do
		var b: B<X> init B<X>.new
		var a: A<X>
		a ?= b
	end
	
	operation test4() : Void is do
		var b: B<X> init B<X>.new
		var a: A<X>
		a ?= b
	end
	
	operation test5() : Void is do
		var b: B<A<Y>> init B<A<Y>>.new
		var a: A<A<Y>>
		b := a
	end
	
	operation test6() : Void is do
		var b: B<A<Y>> init B<A<Y>>.new
		var a: A<A<Y>>
		a ?= b
	end
	
	operation test7() : Void is do
		var a: A<X> init A<Y>.new
	end

}

/* END OF FILE */